# InnoHackHackathon

./: README.md
Android-Ios-wrapper/: App.tsx  app.json  package-lock.json  package.json
TestCases/FakeNews/: news1.txt  news2.txt  news3.txt  news4.txt  news5.txt
TestCases/ResumeAnalyser/JobDesc/: Desc1.txt  Desc2.txt  Desc3.txt
TestCases/codeDebugger/: P1.py  P2.js  P3.java  P4.cpp  P5.c
desktop/: main.py  pyproject.toml
website/: main.py  pyproject.toml
website/utils/: code_analyzer.py  document_qa.py  email_agent.py  meeting_agent.py  news_validator.py  ollama_handler.py  resume_parser.py  schemas.py
